Add opening empty fields

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <div class="game-box">
         <div class="info-line">
-            <img class = count-bomb id = "S0" type="image" src="resources/sprite-zero.jpg">
-            <img class = count-bomb id = "S1" type="image" src="resources/sprite-zero.jpg">
-            <img class = count-bomb id = "S2" type="image" src="resources/sprite-zero.jpg">
-            <button class="new-game" onclick = newGame()>
-                <img class="minesweeper-play-btn" src="resources/sprite-smile.jpg">
+            <img class = count-bomb id = "S0" type="image" src = "resources/sprite-zero.jpg">
+            <img class = count-bomb id = "S1" type="image" src = "resources/sprite-zero.jpg">
+            <img class = count-bomb id = "S2" type="image" src = "resources/sprite-zero.jpg">
+            <button class = "new-game" onclick = newGame()>
+                <img class = "minesweeper-play-btn" state = 'smile' src = "resources/sprite-smile.jpg">
             </button>
             <img id = "S3" type="image" src="resources/sprite-zero.jpg">
             <img id = "S4" type="image" src="resources/sprite-zero.jpg">
