--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
             <img class = count-bomb id = "S0" type="image" src = "resources/sprite-zero.jpg">
             <img class = count-bomb id = "S1" type="image" src = "resources/sprite-zero.jpg">
             <img class = count-bomb id = "S2" type="image" src = "resources/sprite-zero.jpg">
-            <button class = "new-game" onclick = newGame()>
-                <img class = "minesweeper-play-btn" state = 'smile' src = "resources/sprite-smile.jpg">
-            </button>
+            <img class = "minesweeper-play-btn" onclick = newGame() state = 'smile' src = "resources/sprite-smile.jpg">
             <img id = "S3" type="image" src="resources/sprite-zero.jpg">
             <img id = "S4" type="image" src="resources/sprite-zero.jpg">
             <img id = "S5" type="image" src="resources/sprite-zero.jpg">
